aplicacion css al header

--- a/index.html
+++ b/index.html
@@ -18,38 +18,36 @@
 </head>
 <body>
     <header>
-        <div class="NavLogo">
+        <div>
             <a href="#">
-                <img src="./assets/img/imagen-logo.png" alt="logo-portfolio">
+                <img class="Logo" src="./assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
         <nav>
-            <div class="NavBar">
-                <ul>
-                    <li><a href="./pages/sobre-mi.html">SOBRE MI</a></li>
-                    <li><a href="./pages/skills.html">SKILLS</a></li>
-                    <li><a href="./pages/portfolio.html">PORTFOLIO</a></li>
-                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
-                </ul>
-            </div>
+            <ul class="NavBar">
+                <li><a href="./pages/sobre-mi.html">SOBRE MI</a></li>
+                <li><a href="./pages/skills.html">SKILLS</a></li>
+                <li><a href="./pages/portfolio.html">PORTFOLIO</a></li>
+                <li><a href="./pages/contacto.html">CONTACTO</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <section class="LogoInicio">
             <img class="ImagenPersonaPc" src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
-            <!-- LOGO EXPLOTADO -->
-            <section>
-                <div class="Nombre">
-                    <img class="ImagenL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
-                    <p class="NombreLogo">EANDRO</p>
-                </div>
-                <div class="Apellido">
-                    <img class="ImagenR" src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
-                    <p class="ApellidoLogo">OMERO</p>
-                </div>
-                <p class="WebDev">Desarrollador WEB</p>
-                <a class="BotonContacto" href="./pages/contacto.html">CONTACTEME</a>
-            </section>
+        </section>
+        <!-- LOGO EXPLOTADO -->
+        <section>
+            <div class="Nombre">
+                <img class="ImagenL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
+                <p class="NombreLogo">EANDRO</p>
+            </div>
+            <div class="Apellido">
+                <img class="ImagenR" src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
+                <p class="ApellidoLogo">OMERO</p>
+            </div>
+            <p class="WebDev">Desarrollador WEB</p>
+            <a class="BotonContacto" href="./pages/contacto.html">CONTACTEME</a>
         </section>
     </main>
     <footer>
