--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,11 +19,11 @@
     <header>
         <div>
             <a href="../index.html">
-                <img src="../assets/img/imagen-logo.png" alt="logo-portfolio">
+                <img class="Logo" src="../assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
         <nav>
-            <ul>
+            <ul class="NavBar">
                 <li><a href="./sobre-mi.html">SOBRE MI</a></li>
                 <li><a href="./skills.html">SKILLS</a></li>
                 <li><a href="./#">PORTFOLIO</a></li>
@@ -34,42 +34,40 @@
     <main>
         <h2>PORTFOLIO</h2>
         <section>
-            <article>
-                <div class="FilaPortfolio">
-                    <!-- PROYECTO 1 -->
-                    <div class="BoxFilaPortfolio">
-                        <img src="../assets/img/proyecto-1.jpeg" alt="Proyecto1">
-                        <p>PROYECTO UNO</p>
-                    </div>
-                    <!-- PROYECTO 2 -->
-                    <div class="BoxFilaPortfolio">
-                        <img src="../assets/img/proyecto-2.jpg" alt="Proyecto1">
-                        <p>PROYECTO DOS</p>
-                    </div>
-                    <!-- PROYECTO 3 -->
-                    <div class="BoxFilaPortfolio">
-                        <img src="../assets/img/proyecto-3.jpeg" alt="Proyecto1">
-                        <p>PROYECTO TRES</p>
-                    </div>
+            <div class="FilaPortfolio">
+                <!-- PROYECTO 1 -->
+                <div class="BoxFilaPortfolio">
+                    <img src="../assets/img/proyecto-1.jpeg" alt="Proyecto1">
+                    <p>PROYECTO UNO</p>
                 </div>
-                <div class="FilaPortfolio">
-                    <!-- PROYECTO 4 -->
-                    <div class="BoxFilaPortfolio">
-                        <img src="../assets/img/proyecto-4.jpeg" alt="Proyecto1">
-                        <p>PROYECTO CUATRO</p>
-                    </div>
-                    <!-- PROYECTO 5 -->
-                    <div class="BoxFilaPortfolio">
-                        <img src="../assets/img/proyecto-5.jpeg" alt="Proyecto1">
-                        <p>PROYECTO CINCO</p>
-                    </div>
-                    <!-- PROYECTO 6 -->
-                    <div class="BoxFilaPortfolio">
-                        <img src="../assets/img/proyecto-6.jpeg" alt="Proyecto1">
-                        <p>PROYECTO SEIS</p>
-                    </div>
+                <!-- PROYECTO 2 -->
+                <div class="BoxFilaPortfolio">
+                    <img src="../assets/img/proyecto-2.jpg" alt="Proyecto1">
+                    <p>PROYECTO DOS</p>
                 </div>
-            </article>
+                <!-- PROYECTO 3 -->
+                <div class="BoxFilaPortfolio">
+                    <img src="../assets/img/proyecto-3.jpeg" alt="Proyecto1">
+                    <p>PROYECTO TRES</p>
+                </div>
+            </div>
+            <div class="FilaPortfolio">
+                <!-- PROYECTO 4 -->
+                <div class="BoxFilaPortfolio">
+                    <img src="../assets/img/proyecto-4.jpeg" alt="Proyecto1">
+                    <p>PROYECTO CUATRO</p>
+                </div>
+                <!-- PROYECTO 5 -->
+                <div class="BoxFilaPortfolio">
+                    <img src="../assets/img/proyecto-5.jpeg" alt="Proyecto1">
+                    <p>PROYECTO CINCO</p>
+                </div>
+                <!-- PROYECTO 6 -->
+                <div class="BoxFilaPortfolio">
+                    <img src="../assets/img/proyecto-6.jpeg" alt="Proyecto1">
+                    <p>PROYECTO SEIS</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
