--- a/pages/skills.html
+++ b/pages/skills.html
@@ -19,11 +19,11 @@
     <header>
         <div>
             <a href="../index.html">
-                <img src="../assets/img/imagen-logo.png" alt="logo-portfolio">
+                <img class="Logo" src="../assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
         <nav>
-            <ul>
+            <ul class="NavBar">
                 <li><a href="./sobre-mi.html">SOBRE MI</a></li>
                 <li><a href="#">SKILLS</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section id="skills">
-            <article class="ContenedorSkills">
+            <section class="ContenedorSkills">
                 <h2>SKILLS</h2>
                 <div class="FilaSkills">
                     <!-- HTML -->
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
         </section>
     </main>
     <footer>
