--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -17,13 +17,13 @@
 </head>
 <body>
     <header>
-        <div class="NavLogo">
+        <div>
             <a href="../index.html">
-                <img src="../assets/img/imagen-logo.png" alt="logo-portfolio">
+                <img class="Logo" src="../assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
         <nav>
-            <ul>
+            <ul class="NavBar">
                 <li><a href="#">SOBRE MI</a></li>
                 <li><a href="./skills.html">SKILLS</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
@@ -34,16 +34,16 @@
     <main>
         <section class="SobreMi">
             <img class="ImagenPersonaCafe" src="../assets/img/persona-con-cafe.png" alt="persona-con-cafe">
-            <article class="SeccionSobreMi">
+            <section class="SeccionSobreMi">
                 <h1>SOBRE MI</h1>
                 <p>Actualmente diseño y programo sitios de aplicaciones web del lado del cliente (Front-end).</p>
                 <p>Me mantengo en constante aprendisaje, apasionado con el trabajo que realizo, ofreciendo y aportando mis conocimientos, habilidades y experiencia, así como nuevas ideas, soluciones,   personalización y seguimiento de calidad.</p>
                 <div>
-                <!-- boton descargar cv -->
-                <!-- !  AGREGAR CURRICULUM VITAE -->
-                <a class="DescargaCv" href="#">DESCARGAR CV</a>
+                    <!-- boton descargar cv -->
+                    <!-- !  AGREGAR CURRICULUM VITAE -->
+                    <a class="DescargaCv" href="#">DESCARGAR CV</a>
                 </div>
-            </article>
+            </section>
         </section>
     </main>
     <footer>
