--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,11 +19,11 @@
     <header>
         <div>
             <a href="../index.html">
-                <img src="../assets/img/imagen-logo.png" alt="logo-portfolio">
+                <img class="Logo" src="../assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
         <nav>
-            <ul>
+            <ul class="NavBar">
                 <li><a href="./sobre-mi.html">SOBRE MI</a></li>
                 <li><a href="./skills.html">SKILLS</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
@@ -44,40 +44,38 @@
         <section>
             <form action="#" method="post">
                 <div class="FilasContacto">
-                <!-- Nombre -->
+                    <!-- Nombre -->
                     <div class="Formulario">
                         <label for="Nombre">Nombre</label>
                         <input type="text" id="Nombre" name="Nombre" placeholder="Jose">
                     </div>
-                <!-- Apellido -->
-                <div class="Formulario">
-                    <label for="Apellido">Apellido</label>
-                    <input type="text" id="Apellido" name="Apellido" placeholder="Perez">
+                    <!-- Apellido -->
+                    <div class="Formulario">
+                        <label for="Apellido">Apellido</label>
+                        <input type="text" id="Apellido" name="Apellido" placeholder="Perez">
+                    </div>
                 </div>
-            </div>
-            <div class="FilasContacto">
-                <!-- e-mail -->
-                <div class="Formulario">
-                    <label for="CorreoElectronico">E-mail</label>
-                    <input type="email" id="CorreoElectronico" name="CorreoElectronico" placeholder="tunombre@tucorreo.com">
-                </div>
-                <!-- telefono -->
-                <div class="Formulario">
+                <div class="FilasContacto">
+                    <!-- e-mail -->
+                    <div class="Formulario">
+                        <label for="CorreoElectronico">E-mail</label>
+                        <input type="email" id="CorreoElectronico" name="CorreoElectronico" placeholder="tunombre@tucorreo.com">
+                    </div>
+                    <!-- telefono -->
+                    <div class="Formulario">
                     <label for="telefono">Tel celular</label>
                     <input type="tel" id="telefono" name="telefono" placeholder="+541234567890">
+                    </div>
                 </div>
-            </div>
-            <div class="Comentario">
                 <!-- comentario -->
                 <div class="Formulario">
                     <label for="comentario">Comentario</label>
                     <textarea name="comentario" id="comentario" cols="30" rows="10" placeholder="Escribe un comentario"></textarea>
                 </div>
-            </div>
-            <!-- boton enviar -->
-            <div class="Enviar">
-                <input type="submit" value="enviar">
-            </div>
+                <!-- boton enviar -->
+                <div class="Enviar">
+                    <input type="submit" value="enviar">
+                </div>
             </form>
         </section>
     </main>
