css a pagina portfolio + retoces al header

--- a/index.html
+++ b/index.html
@@ -33,21 +33,34 @@
         </nav>
     </header>
     <main>
-        <section class="LogoInicio">
-            <img class="ImagenPersonaPc" src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
-        </section>
-        <!-- LOGO EXPLOTADO -->
-        <section>
-            <div class="Nombre">
-                <img class="ImagenL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
-                <p class="NombreLogo">EANDRO</p>
-            </div>
-            <div class="Apellido">
-                <img class="ImagenR" src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
-                <p class="ApellidoLogo">OMERO</p>
-            </div>
-            <p class="WebDev">Desarrollador WEB</p>
-            <a class="BotonContacto" href="./pages/contacto.html">CONTACTEME</a>
+        <section class="MainIndex">
+            <section class="ImagenPersonaPc">
+                <img src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
+            </section>
+            <section>
+                <div class="Nombre">
+                    <div>
+                        <img src="./assets/img/letra-l-logo.png" alt="letra-l-logo" class="ImgL">
+                    </div>
+                    <div>
+                        <p class="ParNombre">EANDRO</p>
+                    </div>
+                </div>
+                <div class="Apellido">
+                    <div>
+                        <img src="./assets/img/letra-r-logo.png" alt="letra-r-logo" class="ImgR">
+                    </div>
+                    <div>
+                        <p class="ParApellido">OMERO</p>
+                    </div>
+                </div>
+                <div class="WebDev">
+                    <p>Desarrollador WEB</p>
+                </div>
+                <div class="BotonContacto">
+                    <a href="./pages/contacto.html">CONTACTEME</a>
+                </div>
+            </section>
         </section>
     </main>
     <footer>
