--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,40 +32,54 @@
         </nav>
     </header>
     <main>
-        <h2>PORTFOLIO</h2>
+        <section>
+            <h2>PORTFOLIO</h2>
+        </section>
         <section>
             <div class="FilaPortfolio">
                 <!-- PROYECTO 1 -->
                 <div class="BoxFilaPortfolio">
-                    <img src="../assets/img/proyecto-1.jpeg" alt="Proyecto1">
-                    <p>PROYECTO UNO</p>
+                    <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
+                        <img src="../assets/img/proyecto-1.jpeg" alt="Proyecto1">
+                        <p>PROYECTO UNO</p>
+                    </a>
                 </div>
                 <!-- PROYECTO 2 -->
                 <div class="BoxFilaPortfolio">
-                    <img src="../assets/img/proyecto-2.jpg" alt="Proyecto1">
-                    <p>PROYECTO DOS</p>
+                    <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
+                        <img src="../assets/img/proyecto-2.jpg" alt="Proyecto1">
+                        <p>PROYECTO DOS</p>
+                    </a>
                 </div>
                 <!-- PROYECTO 3 -->
                 <div class="BoxFilaPortfolio">
-                    <img src="../assets/img/proyecto-3.jpeg" alt="Proyecto1">
-                    <p>PROYECTO TRES</p>
+                    <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
+                        <img src="../assets/img/proyecto-3.jpeg" alt="Proyecto1">
+                        <p>PROYECTO TRES</p>
+                    </a>
                 </div>
             </div>
             <div class="FilaPortfolio">
                 <!-- PROYECTO 4 -->
                 <div class="BoxFilaPortfolio">
-                    <img src="../assets/img/proyecto-4.jpeg" alt="Proyecto1">
-                    <p>PROYECTO CUATRO</p>
+                    <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
+                        <img src="../assets/img/proyecto-4.jpeg" alt="Proyecto1">
+                        <p>PROYECTO CUATRO</p>
+                    </a>
                 </div>
                 <!-- PROYECTO 5 -->
                 <div class="BoxFilaPortfolio">
-                    <img src="../assets/img/proyecto-5.jpeg" alt="Proyecto1">
-                    <p>PROYECTO CINCO</p>
+                    <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
+                        <img src="../assets/img/proyecto-5.jpeg" alt="Proyecto1">
+                        <p>PROYECTO CINCO</p>
+                    </a>
                 </div>
                 <!-- PROYECTO 6 -->
                 <div class="BoxFilaPortfolio">
-                    <img src="../assets/img/proyecto-6.jpeg" alt="Proyecto1">
-                    <p>PROYECTO SEIS</p>
+                    <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
+                        <img src="../assets/img/proyecto-6.jpeg" alt="Proyecto1">
+                        <p>PROYECTO SEIS</p>
+                    </a>
                 </div>
             </div>
         </section>
