css a main skills

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="TituloPortfolio">
             <h2>PORTFOLIO</h2>
         </section>
         <section>
