css a main sobre mi

--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -33,17 +33,20 @@
     </header>
     <main>
         <section class="SobreMi">
-            <img class="ImagenPersonaCafe" src="../assets/img/persona-con-cafe.png" alt="persona-con-cafe">
-            <section class="SeccionSobreMi">
-                <h1>SOBRE MI</h1>
-                <p>Actualmente diseño y programo sitios de aplicaciones web del lado del cliente (Front-end).</p>
-                <p>Me mantengo en constante aprendisaje, apasionado con el trabajo que realizo, ofreciendo y aportando mis conocimientos, habilidades y experiencia, así como nuevas ideas, soluciones,   personalización y seguimiento de calidad.</p>
-                <div>
-                    <!-- boton descargar cv -->
-                    <!-- !  AGREGAR CURRICULUM VITAE -->
-                    <a class="DescargaCv" href="#">DESCARGAR CV</a>
-                </div>
-            </section>
+            <div class="ImagenPersonaCafe">
+                <img src="../assets/img/persona-con-cafe.png" alt="persona-con-cafe">
+            </div>
+            <h1>SOBRE MI</h1>
+            <div class="Parrafo">
+                <p class="Parrafo">Actualmente diseño y programo sitios de aplicaciones web del lado del cliente (Front-end). <br>
+                    Me mantengo en constante aprendisaje,apasionado con el trabajo que realizo,ofreciendo y aportando mis conocimientos,habilidades y experiencia,así como nuevas ideas,soluciones,personalización y seguimiento de calidad.</p>
+            </div>
+            <!-- boton descargar cv -->
+            <!-- !  AGREGAR CURRICULUM VITAE -->
+            <div class="DescargaCv">
+                <a href="#">DESCARGAR CV</a>
+            </div>
+            <!-- <a class="DescargaCv" href="#">DESCARGAR CV</a> -->
         </section>
     </main>
     <footer>
