retoques a main sobre mi

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -36,7 +36,7 @@
             <h2>PORTFOLIO</h2>
         </section>
         <section>
-            <div class="FilaPortfolio">
+            <section class="FilaPortfolio">
                 <!-- PROYECTO 1 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
@@ -58,8 +58,8 @@
                         <p>PROYECTO TRES</p>
                     </a>
                 </div>
-            </div>
-            <div class="FilaPortfolio">
+            </section>
+            <section class="FilaPortfolio">
                 <!-- PROYECTO 4 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
@@ -81,7 +81,7 @@
                         <p>PROYECTO SEIS</p>
                     </a>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
