--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -38,15 +38,14 @@
             </div>
             <h1>SOBRE MI</h1>
             <div class="Parrafo">
-                <p class="Parrafo">Actualmente diseño y programo sitios de aplicaciones web del lado del cliente (Front-end). <br>
-                    Me mantengo en constante aprendisaje,apasionado con el trabajo que realizo,ofreciendo y aportando mis conocimientos,habilidades y experiencia,así como nuevas ideas,soluciones,personalización y seguimiento de calidad.</p>
+                <p>Actualmente diseño y programo sitios de aplicaciones web del lado del cliente (Front-end). <br>
+                Me mantengo en constante aprendisaje,apasionado con el trabajo que realizo,ofreciendo y aportando mis conocimientos,habilidades y experiencia,así como nuevas ideas,soluciones,personalización y seguimiento de calidad.</p>
             </div>
             <!-- boton descargar cv -->
             <!-- !  AGREGAR CURRICULUM VITAE -->
             <div class="DescargaCv">
                 <a href="#">DESCARGAR CV</a>
             </div>
-            <!-- <a class="DescargaCv" href="#">DESCARGAR CV</a> -->
         </section>
     </main>
     <footer>
