retoques a main index

--- a/index.html
+++ b/index.html
@@ -34,33 +34,15 @@
     </header>
     <main>
         <section class="MainIndex">
-            <section class="ImagenPersonaPc">
-                <img src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
-            </section>
-            <section>
-                <div class="Nombre">
-                    <div>
-                        <img src="./assets/img/letra-l-logo.png" alt="letra-l-logo" class="ImgL">
-                    </div>
-                    <div>
-                        <p class="ParNombre">EANDRO</p>
-                    </div>
-                </div>
-                <div class="Apellido">
-                    <div>
-                        <img src="./assets/img/letra-r-logo.png" alt="letra-r-logo" class="ImgR">
-                    </div>
-                    <div>
-                        <p class="ParApellido">OMERO</p>
-                    </div>
-                </div>
-                <div class="WebDev">
-                    <p>Desarrollador WEB</p>
-                </div>
-                <div class="BotonContacto">
-                    <a href="./pages/contacto.html">CONTACTEME</a>
-                </div>
-            </section>
+            <img class="ImagenPersonaPc" src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
+            <img class="LogoL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
+            <p class="ParrafoNombre">EANDRO</p>
+            <img class="LogoR" src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
+            <p class="ParrafoApellido">OMERO</p>
+            <p class="DesWeb">Desarrollador WEB</p>
+            <div class="BotonContacto">
+                <a href="./pages/contacto.html">CONTACTEME</a>
+            </div>
         </section>
     </main>
     <footer>
