retoques en index y animaciones

--- a/index.html
+++ b/index.html
@@ -35,11 +35,19 @@
     <main>
         <section class="MainIndex">
             <img class="ImagenPersonaPc" src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
-            <img class="LogoL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
-            <p class="ParrafoNombre">EANDRO</p>
-            <img class="LogoR" src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
-            <p class="ParrafoApellido">OMERO</p>
-            <p class="DesWeb">Desarrollador WEB</p>
+            <div class="LogoL">
+                <img src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
+                <p>EANDRO</p>
+            </div>
+            <!-- <img class="LogoL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
+            <p class="ParrafoNombre">EANDRO</p> -->
+            <div class="LogoR">
+                <img src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
+                <p>OMERO</p>
+            </div>
+            <div class="DesWeb">
+                <p>Desarrollador WEB</p>
+            </div>
             <div class="BotonContacto">
                 <a href="./pages/contacto.html">CONTACTEME</a>
             </div>
