grid a main index

--- a/index.html
+++ b/index.html
@@ -34,23 +34,24 @@
     </header>
     <main>
         <section class="MainIndex">
-            <img class="ImagenPersonaPc" src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
+            <div class="ImagenPersonaPc">
+                <img src="./assets/img/persona-con-pc.png" alt="persona-con-pc">
+            </div>
             <div class="LogoL">
                 <img src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
                 <p>EANDRO</p>
             </div>
-            <!-- <img class="LogoL" src="./assets/img/letra-l-logo.png" alt="letra-l-logo">
-            <p class="ParrafoNombre">EANDRO</p> -->
             <div class="LogoR">
                 <img src="./assets/img/letra-r-logo.png" alt="letra-r-logo">
                 <p>OMERO</p>
             </div>
             <div class="DesWeb">
                 <p>Desarrollador WEB</p>
-            </div>
-            <div class="BotonContacto">
                 <a href="./pages/contacto.html">CONTACTEME</a>
             </div>
+            <!-- <div class="BotonContacto">
+                <a href="./pages/contacto.html">CONTACTEME</a>
+            </div> -->
         </section>
     </main>
     <footer>
