--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Chakra+Petch:ital@1&family=Michroma&display=swap" rel="stylesheet">
-    <title>Leandro Romero - Diseñador y programador WEB</title>
+    <title>Sobre mi - Leandro Romero,web developer</title>
 </head>
 <body>
     <header>
