orden a main contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,7 +36,7 @@
             <div>
                 <h2>CONTACTO</h2>
             </div>
-            <div>
+            <div class="ParrafoContacto">
                 <p>Si le gusta mi trabajo, no dude en ponerse en contacto conmigo.</p>
             </div>
         </section>
@@ -75,16 +75,20 @@
                         </label>
                     </div>
                 </div>
-                <!-- comentario -->
-                <div class="Formulario">
-                    <label for="comentario">
-                        <span>Escribi un comentario</span>
-                        <textarea name="comentario" id="comentario" cols="30" rows="10"></textarea>
-                    </label>
+                <div class="FilasContacto">
+                    <!-- comentario -->
+                    <div class="Formulario">
+                        <label id="LabelComentario" for="comentario">
+                            <span>Escribi un comentario</span>
+                            <textarea name="comentario" id="comentario" cols="30" rows="10"></textarea>
+                        </label>
+                    </div>
                 </div>
-                <!-- boton enviar -->
-                <div class="Enviar">
-                    <input type="submit" value="enviar">
+                <div class="FilasContacto">
+                    <!-- boton enviar -->
+                    <div class="ENVIAR">
+                        <input type="submit" value="ENVIAR">
+                    </div>
                 </div>
             </form>
         </section>
