animacion, transformaciones y transiciones

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -37,7 +37,7 @@
                 <h2>SKILLS</h2>
                 <div class="FilaSkills">
                     <!-- HTML -->
-                    <div class="FilaSkilsIzquierda">
+                    <div class="FilaSkillsIzquierda">
                         <div class="FilaIzquierdaImagen">
                             <img src="../assets/img/html-ico.png" alt="Logo Html">
                         </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="FilaSkills">
                     <!-- JAVASCRIPT -->
-                    <div class="FilaSkilsIzquierda">
+                    <div class="FilaSkillsIzquierda">
                         <div class="FilaIzquierdaImagen">
                             <img src="../assets/img/java-ico.png" alt="Logo Java">
                         </div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="FilaSkills">
                     <!-- BOOTSTRAP -->
-                    <div class="FilaSkilsIzquierda">
+                    <div class="FilaSkillsIzquierda">
                         <div class="FilaIzquierdaImagen">
                             <img src="../assets/img/bootsrap.png" alt="Logo bootsrap">
                         </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="FilaSkills">
                     <!-- GIT -->
-                    <div class="FilaSkilsIzquierda">
+                    <div class="FilaSkillsIzquierda">
                         <div class="FilaIzquierdaImagen">
                             <img src="../assets/img/git-ico.png" alt="Logo git">
                         </div>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="FilaSkills">
                     <!-- VISUAL STUDIO CODE -->
-                    <div class="FilaSkilsIzquierda">
+                    <div class="FilaSkillsIzquierda">
                         <div class="FilaIzquierdaImagen">
                             <img src="../assets/img/ico-vsc.png" alt="Logo Vsc">
                         </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="FilaSkills">
                     <!-- FIGMA -->
-                    <div class="FilaSkilsIzquierda">
+                    <div class="FilaSkillsIzquierda">
                         <div class="FilaIzquierdaImagen">
                             <img src="../assets/img/figma-ico.png" alt="Logo Figma">
                         </div>
