media queries tablet

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <section class="Skills">
+        <section>
             <section class="ContenedorSkills">
                 <h2>SKILLS</h2>
                 <div class="FilaSkills">
