creacion de mixins

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>OMERO</p>
             </div>
             <div class="DesWeb">
-                <p>Desarrollador WEB</p>
+                <h1>Desarrollador WEB</h1>
                 <a href="./pages/contacto.html">CONTACTEME</a>
             </div>
         </section>
