--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link CSS -->
-    <link rel="stylesheet" href="./css/styles.css">
-    <!-- link google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Chakra+Petch:ital@1&family=Michroma&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Leandro Romero - Diseñador y programador WEB</title>
 </head>
 <body>
@@ -25,28 +21,30 @@
                 <img class="Logo" src="./assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
-        <nav class="navbar navbar-expand-lg">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon Hambur"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./pages/sobre-mi.html">SOBRE MI</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/skills.html">SKILLS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/portfolio.html">PORTFOLIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
-                    </li>
-                    </ul>
-                </div>
+        <div class="container-fluid BarraNav">
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon Hambur"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./pages/sobre-mi.html">SOBRE MI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/skills.html">SKILLS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/portfolio.html">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+                        </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
+        </div>
     </header>
     <main>
         <section class="MainIndex">
