scss a main skills

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <section class="ContenedorSkills">
-                <h2>SKILLS</h2>
+                <h2 class="Skills">SKILLS</h2>
                 <div class="FilaSkills">
                     <!-- HTML -->
                     <div class="FilaSkillsIzquierda">
@@ -49,7 +49,7 @@
                         <div class="FilaDerechaImagen">
                             <img src="../assets/img/css-ico.png" alt="Logo Css">
                         </div>
-                        <div class="FilaDerehaTexto">
+                        <div class="FilaDerechaTexto">
                             <h3>CSS</h3>
                             <p>90%</p>
                         </div>
@@ -71,7 +71,7 @@
                         <div class="FilaDerechaImagen">
                             <img src="../assets/img/sass-ico.png" alt="Logo sass">
                         </div>
-                        <div class="FilaDerehaTexto">
+                        <div class="FilaDerechaTexto">
                             <h3>SASS</h3>
                             <p>80%</p>
                         </div>
@@ -93,7 +93,7 @@
                         <div class="FilaDerechaImagen">
                             <img src="../assets/img/angular-ico.png" alt="Logo angular">
                         </div>
-                        <div class="FilaDerehaTexto">
+                        <div class="FilaDerechaTexto">
                             <h3>ANGULAR</h3>
                             <p>60%</p>
                         </div>
@@ -115,7 +115,7 @@
                         <div class="FilaDerechaImagen">
                             <img src="../assets/img/githhub-ico.png" alt="Logo Github">
                         </div>
-                        <div class="FilaDerehaTexto">
+                        <div class="FilaDerechaTexto">
                             <h3>GITHUB</h3>
                             <p>80%</p>
                         </div>
@@ -137,7 +137,7 @@
                         <div class="FilaDerechaImagen">
                             <img src="../assets/img/sublime-ico.png" alt="Logo Sublime text">
                         </div>
-                        <div class="FilaDerehaTexto">
+                        <div class="FilaDerechaTexto">
                             <h3>SUBLIME TEXT</h3>
                             <p>80%</p>
                         </div>
@@ -159,7 +159,7 @@
                         <div class="FilaDerechaImagen">
                             <img src="../assets/img/photoshop-ico.png" alt="Logo Photoshop">
                         </div>
-                        <div class="FilaDerehaTexto">
+                        <div class="FilaDerechaTexto">
                             <h3>PHOTOSHOP</h3>
                             <p>70%</p>
                         </div>
