scss a main portfolio

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <section class="ContenedorSkills">
-                <h2 class="Skills">SKILLS</h2>
+                <h2 class="Titulos">SKILLS</h2>
                 <div class="FilaSkills">
                     <!-- HTML -->
                     <div class="FilaSkillsIzquierda">
