--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
     <main>
         <section class="Contacto">
             <div>
-                <h2>CONTACTO</h2>
+                <h2 class="Titulos">CONTACTO</h2>
             </div>
             <div class="ParrafoContacto">
                 <p>Si le gusta mi trabajo, no dude en ponerse en contacto conmigo.</p>
