--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="TituloPortfolio">
-            <h2>PORTFOLIO</h2>
+            <h2 class="Titulos">PORTFOLIO</h2>
         </section>
         <section>
             <section class="FilaPortfolio">
