--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <img class="Logo" src="./assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
-        <div class="container-fluid BarraNav">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon Hambur"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav mr-auto BarraNav">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="./pages/sobre-mi.html">SOBRE MI</a>
                         </li>
