creacion de meta

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
     <!-- link CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Contacto - Leandro Romero,web developer</title>
+    <title>Contacto - Leandro Romero - Diseñador y programador WEB</title>
 </head>
 <body>
     <header>
