--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link CSS -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Leandro Romero - Diseñador y programador WEB</title>
+    <title>Inicio - Leandro Romero - Diseñador y programador WEB</title>
 </head>
 <body>
     <header>
@@ -21,13 +21,13 @@
                 <img class="Logo" src="./assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
-        <div class="container-fluid">
+        <div class="container">
             <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler Hambur" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon Hambur"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mr-auto BarraNav">
+                    <ul class="navbar-nav BarraNav">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="./pages/sobre-mi.html">SOBRE MI</a>
                         </li>
