--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio - Leandro Romero,web developer</title>
+    <title>Portfolio - Leandro Romero - Diseñador y programador WEB</title>
 </head>
 <body>
     <header>
