--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Romero Leandro">
+    <meta name="copyright" content="Romero Leandro">
+    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.>
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
@@ -11,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- link CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Sobre mi - Leandro Romero,web developer</title>
+    <title>Sobre mi - Leandro Romero - Diseñador y programador WEB</title>
 </head>
 <body>
     <header>
