bootstrap a navs de todas las pages

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </a>
         </div>
         <div class="container">
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler Hambur" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon Hambur"></span>
+            <nav class="navbar navbar-expand-lg Menu">
+                <button class="navbar-toggler btn-menu" id="btn-menu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav BarraNav">
@@ -40,8 +40,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                         </li>
-                        </ul>
-                    </div>
+                    </ul>
                 </div>
             </nav>
         </div>
