--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,14 +18,29 @@
                 <img class="Logo" src="../assets/img/imagen-logo.png" alt="logo-portfolio">
             </a>
         </div>
-        <nav>
-            <ul class="NavBar">
-                <li><a href="./sobre-mi.html">SOBRE MI</a></li>
-                <li><a href="./skills.html">SKILLS</a></li>
-                <li><a href="./portfolio.html">PORTFOLIO</a></li>
-                <li><a href="#">CONTACTO</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg Menu">
+                <button class="navbar-toggler btn-menu" id="btn-menu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav BarraNav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">SOBRE MI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./skills.html">SKILLS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="Contacto">
