--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Romero Leandro">
+    <meta name="copyright" content="Romero Leandro">
+    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
+    <!-- icono pestaña -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
@@ -26,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav BarraNav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">SOBRE MI</a>
+                            <a class="nav-link" aria-current="page" href="./sobre-mi.html">SOBRE MI</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./skills.html">SKILLS</a>
@@ -35,7 +39,7 @@
                             <a class="nav-link" href="./portfolio.html">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                            <a class="nav-link" href="#">CONTACTO</a>
                         </li>
                     </ul>
                 </div>
