--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Romero Leandro">
     <meta name="copyright" content="Romero Leandro">
-    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.>
+    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
+    <!-- icono pestaña -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
